--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,34 @@
   <head>
     <meta charset="utf-8" />
     <title>MemoLicious</title>
+    <meta
+      name="color-scheme"
+      content="light dark"
+    />
     <base href="/" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/png" href="./assets/icons/favicon-16x16.png" />
-    <link rel="icon" type="image/png" href="./assets/icons/favicon-32x32.png" />
-    <link rel="icon" type="image/x-icon" href="./assets/icons/favicon.ico" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      href="./assets/icons/favicon-16x16.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      href="./assets/icons/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="./assets/icons/favicon.ico"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+    />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&amp;display=swap"
       rel="stylesheet"
@@ -17,10 +39,16 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
-    <link rel="manifest" href="manifest.webmanifest" />
-    <meta name="theme-color" content="#d2eab3" />
+    <link
+      rel="manifest"
+      href="manifest.webmanifest"
+    />
+    <meta
+      name="theme-color"
+      content="#d2eab3"
+    />
   </head>
-  <body>
+  <body class="auto light">
     <app-root></app-root>
     <noscript
       >Please enable JavaScript to continue using this application.</noscript
